Ui fix : hand icon mobile height

--- a/src/app.css
+++ b/src/app.css
@@ -713,7 +713,7 @@ footer .content .techfolio_copyright {
     position: absolute;
   }
   .icon-wrapper {
-    top: 11%;
+    top: 10.5%;
   }
   .wrap-default img {
     max-width: 100%;
